objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closure Pending</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Merged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Re-Open</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManager_Login__c</fullName>
        <formula>Owner:User.Manager.Id  = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsManager Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Sub_Reason__c</fullName>
        <label>Issue Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_SS_IssueReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adulteration / Cargo Theft</fullName>
                </value>
                <value>
                    <fullName>Blocks</fullName>
                </value>
                <value>
                    <fullName>Caking from Humidity</fullName>
                </value>
                <value>
                    <fullName>Chemical Additive</fullName>
                </value>
                <value>
                    <fullName>Chemical Deficiency</fullName>
                </value>
                <value>
                    <fullName>Coarse</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Contamination</fullName>
                </value>
                <value>
                    <fullName>Damaged Cargo</fullName>
                </value>
                <value>
                    <fullName>Delivery Delay</fullName>
                </value>
                <value>
                    <fullName>Dust</fullName>
                </value>
                <value>
                    <fullName>Granulometric Uniformity</fullName>
                </value>
                <value>
                    <fullName>Humidity</fullName>
                </value>
                <value>
                    <fullName>Impurity</fullName>
                </value>
                <value>
                    <fullName>Incorrect Documentation</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Oil</fullName>
                </value>
                <value>
                    <fullName>Packing</fullName>
                </value>
                <value>
                    <fullName>Product Label Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Product Spillage on Truck</fullName>
                </value>
                <value>
                    <fullName>Stay Extension Fee</fullName>
                </value>
                <value>
                    <fullName>Stones</fullName>
                </value>
                <value>
                    <fullName>Transport Issue</fullName>
                </value>
                <value>
                    <fullName>Weight Discrepancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Test</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases (Lead Test)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <formula>$User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderProductName__c</fullName>
        <formula>PMC_SS_OrderProduct__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderQuantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DuplicateRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_24HourNotice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Potash cases only.  Toggle box checked if quality case is reportable and a 24-Hour Notice has been issued to Mosaic Production Facility Operations.  A copy of the 24-Hour Notice should be attached to the quality case as an uploaded file under the Related tab</description>
        <label>24 Hour Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccessorialCostDetail__c</fullName>
        <label>Accessorial Costs Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment Rental</fullName>
                </value>
                <value>
                    <fullName>Insurance Costs</fullName>
                </value>
                <value>
                    <fullName>Legal Costs</fullName>
                </value>
                <value>
                    <fullName>Samples Shipped</fullName>
                </value>
                <value>
                    <fullName>Transportation Costs/Labor</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Warehouse Cost/Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AccessorialLevel1Costs__c</fullName>
        <inlineHelpText>To total the Accessorial Cost on Parent Quality and Non-Quality</inlineHelpText>
        <label>Accessorial Level 1 Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccessorialLevel2Costs__c</fullName>
        <inlineHelpText>To total the Accessorial Cost on Child Quality and Non-Quality</inlineHelpText>
        <label>Accessorial Level 2 Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccessorialLevel3Costs__c</fullName>
        <label>Accessorial Level 3 Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates Account manager of Account Team</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountType__c</fullName>
        <formula>TEXT( Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Account_Owner_Sales_Office__c</fullName>
        <formula>TEXT(Account.Owner.PMC_CPQ_SalesOffice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ActionReason__c</fullName>
        <label>Action Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Rebill</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Reverse Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ActionToken__c</fullName>
        <label>Action Token</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Rebill</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ActionsToResolve__c</fullName>
        <label>Actions To Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancel/Rebill</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>No Quality Action Required</fullName>
                </value>
                <value>
                    <fullName>Quality Mitigation Performed</fullName>
                </value>
                <value>
                    <fullName>Reconsignment</fullName>
                </value>
                <value>
                    <fullName>Reship</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AffectedPartofLoad__c</fullName>
        <description>Text field (255) to record comments, if applicable. Ex: Vessel hold #4</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Affected Part of Load</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ApprovalStatus__c</fullName>
        <description>To indicate the approval status of the case</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
                <value>
                    <fullName>Level 1 Approved</fullName>
                </value>
                <value>
                    <fullName>Level 2 Approved</fullName>
                </value>
                <value>
                    <fullName>Level 3 Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ArticleType__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Procedure</fullName>
                </value>
                <value>
                    <fullName>Technical Bulletin/Notice</fullName>
                </value>
                <value>
                    <fullName>Training Document</fullName>
                </value>
                <value>
                    <fullName>Transition Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AssistCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle box checked if Customer or Account Manager has requested Quality Assurance / other Mosaic assistance at the customer facility.</description>
        <label>Assist Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AtFaultParty__c</fullName>
        <label>At Fault Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Logistics Planning</fullName>
                </value>
                <value>
                    <fullName>Plant / Operations</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Supply Planning</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_BadOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Rail shipping case is a Bad Order</description>
        <label>Bad Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CancelAmount__c</fullName>
        <label>Invoice Delta Cancel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CaseAge__c</fullName>
        <formula>NOW() -  ClosedDate</formula>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CaseRecord__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;   Id ,  CaseNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CaseStatus__c</fullName>
        <formula>CASE( Status , &apos;New&apos;, &apos;Open&apos;, &apos;Working&apos;, &apos;In Progress&apos;,&apos;Pending&apos;, &apos;In Progress&apos;,&apos;Escalated&apos;,&apos;In Progress&apos;,&apos;Re-Open&apos;,&apos;In Progress&apos;,&apos;Rejected&apos;,&apos;Closed&apos;,&apos;Closed&apos;,&apos;Closed&apos;,&apos;Closure Pending&apos;,&apos;Closed&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClaimPaymentAmount__c</fullName>
        <description>This field will be used to store the claim Payment Amount used in RoC documents.</description>
        <label>Claim Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ClientDenied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Details if Client is on Client Denied List</description>
        <label>Client Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ContactInformationOnSite_c__c</fullName>
        <description>Field displayed when Issue Reason selected is &apos;Equipment Failure&apos; to enter the Contact Information to arrange repairs of equipment.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Information On-site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractAmendmentJustificationVal__c</fullName>
        <description>This field is to indicate the Contract Amendment Justification</description>
        <label>Contract Amendment Justification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_SS_ContractAmendmentType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Input Error</fullName>
                </value>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Capacity Restriction</fullName>
                </value>
                <value>
                    <fullName>Quality Restriction</fullName>
                </value>
                <value>
                    <fullName>Raw Material / Product Restriction</fullName>
                </value>
                <value>
                    <fullName>Truck Restriction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractAmendmentType__c</fullName>
        <description>This field is to indicate the Contract Amendment Type</description>
        <label>Contract Amendment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Code</fullName>
                </value>
                <value>
                    <fullName>Agent’s Commission</fullName>
                </value>
                <value>
                    <fullName>Contract End Date</fullName>
                </value>
                <value>
                    <fullName>Contract Start Date</fullName>
                </value>
                <value>
                    <fullName>Culture Exchange</fullName>
                    <label>Culture</label>
                </value>
                <value>
                    <fullName>Due Date</fullName>
                </value>
                <value>
                    <fullName>Freight Cost</fullName>
                </value>
                <value>
                    <fullName>Incoterm</fullName>
                </value>
                <value>
                    <fullName>Packing</fullName>
                </value>
                <value>
                    <fullName>Plant/Origin</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Product Exchange</fullName>
                    <label>Product Exchange;(Different Composition)</label>
                </value>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Volume Change</fullName>
                </value>
                <value>
                    <fullName>Payment Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractCancellationSubReason__c</fullName>
        <label>Contract Cancellation Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_SS_ContractCancellation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Factory Problems</fullName>
                </value>
                <value>
                    <fullName>Lack of Raw Materials</fullName>
                </value>
                <value>
                    <fullName>Logistic Problems</fullName>
                </value>
                <value>
                    <fullName>Quality Problems</fullName>
                </value>
                <value>
                    <fullName>Unreleased Credit - Constitution of Guarantee</fullName>
                </value>
                <value>
                    <fullName>Unreleased Credit - Delinquency</fullName>
                </value>
                <value>
                    <fullName>Unreleased Credit - Surety</fullName>
                </value>
                <value>
                    <fullName>Unreleased Credit - Unauthorized term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ContractCancellation__c</fullName>
        <label>Contract Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Balance Return to Master Contract</fullName>
                    <isActive>false</isActive>
                    <label>Balance Return to Master Contract</label>
                </value>
                <value>
                    <fullName>Cancellation Due to Customer Death</fullName>
                </value>
                <value>
                    <fullName>Commercial Input Error</fullName>
                </value>
                <value>
                    <fullName>Customer Cancellation</fullName>
                </value>
                <value>
                    <fullName>Insufficient Loading Balance</fullName>
                </value>
                <value>
                    <fullName>Mosaic’s Failure</fullName>
                </value>
                <value>
                    <fullName>No Digital Signature &gt; 15 Days</fullName>
                </value>
                <value>
                    <fullName>No Physical Signature &gt; 40 Days</fullName>
                    <isActive>false</isActive>
                    <label>No Physical Signature &gt; 40 Days</label>
                </value>
                <value>
                    <fullName>Unapproved Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Unpaid Expired Contracts &gt; 15 Days</fullName>
                    <isActive>false</isActive>
                    <label>Unpaid Expired Contracts &gt; 15 Days</label>
                </value>
                <value>
                    <fullName>Volume Reduction Due to Agronomic Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Contract)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CorrectedWeight__c</fullName>
        <description>Field displayed when Issue Reason selected is &apos;Weight Discrepancy&apos; or &apos;Missing Cargo&apos; to input the corrected weight of the product.</description>
        <label>Corrected Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CostPerDay__c</fullName>
        <description>Field displayed when Issue Reason selected is &quot;Demurrage&quot; to enter the cost per day for the demurrage.</description>
        <label>Cost Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CreditDebitAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit/Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CreditMemoNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Memo Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentDestinationLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either Current Destination (Location) or Current Destination (Ship To) but cannot select both.</description>
        <label>Current Destination(Location)</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases (Current Destination(Location))</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentDestinationShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either Current Destination (Location) or Current Destination (Ship To) but cannot select both.</description>
        <label>Current Destination(Ship To)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Current Destination(Ship To))</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentLocation__c</fullName>
        <description>Field displayed when Issue Reason selected is &apos;Equipment Failure&apos; to enter the current location of the equiptment failure.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerCreditsDetail__c</fullName>
        <label>Customer Credits Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Quality Credit</fullName>
                </value>
                <value>
                    <fullName>Service Credit</fullName>
                </value>
                <value>
                    <fullName>Transportation Credit</fullName>
                </value>
                <value>
                    <fullName>Warehouse Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerCreditsLevel1__c</fullName>
        <inlineHelpText>To total &apos;Customer Credits&apos; for Parent Quality and Non-Quality</inlineHelpText>
        <label>Customer Credits Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerCreditsLevel2__c</fullName>
        <inlineHelpText>To total &apos;Customer Credits&apos; for Child Quality and Non-Quality</inlineHelpText>
        <label>Customer Credits Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerCreditsLevel3__c</fullName>
        <label>Customer Credits Level 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerImpact__c</fullName>
        <description>Likely impact to Customer</description>
        <label>Customer Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Minor impact to customer’s supply / operations / safety / health</fullName>
                </value>
                <value>
                    <fullName>No impact to customer’s supply / operations / safety / health</fullName>
                </value>
                <value>
                    <fullName>Rejection / Loss of Cargo and/or risk of losing a customer</fullName>
                </value>
                <value>
                    <fullName>Significant impact to customer’s supply / operations / safety / health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerImpacted__c</fullName>
        <description>Select the most appropriate category to describe if the quality event has negatively impacted the customer experience</description>
        <label>Customer Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerIncurredCostsDetail__c</fullName>
        <label>Customer Incurred Costs Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Diversion Fee</fullName>
                </value>
                <value>
                    <fullName>Reconsignment Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerIncurredLevel1Cost__c</fullName>
        <inlineHelpText>To total &apos;Customer Incurred Cost&apos; for Parent Quality and Non-Quality</inlineHelpText>
        <label>Customer Incurred Level 1 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerIncurredLevel2Cost__c</fullName>
        <inlineHelpText>To total &apos;Customer Incurred Cost&apos; for Child Quality and Non-Quality</inlineHelpText>
        <label>Customer Incurred Level 2 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CustomerIncurredLevel3Cost__c</fullName>
        <label>Customer Incurred Level 3 Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>